인터뷰에 검색 버튼을 추가하라
인터뷰 조회 화면에서 검색하여 볼 수 있는 버튼을 추가합니다

--- a/app/src/main/resources/static/js/app/interviews.css
+++ b/app/src/main/resources/static/js/app/interviews.css
@@ -43,3 +43,12 @@ a, a:link, a:visited, a:hover {
     margin-bottom: 10px;
     font-size: 15px;
 }
+
+.input-box {
+    text-align: center;
+    padding: 20px;
+}
+.searchButton {
+    background-color: #1b5ac2;
+    color: white;
+}
