--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -35,8 +35,8 @@
                     <input type="hidden" class="previous" value="">
                 </form>
                 <div class="input-box">
-                    <input type="text" placeholder="검색어 입력">
-                    <button class="searchButton">검색</button>
+                    <input type="text" placeholder="검색어 입력" id="searchText">
+                    <button id="btn-interview-search" class="searchButton" href="javascript:void(0)" onclick="search()">검색</button>
                 </div>
                 {{#adminAuthority}}
                     <button type="button" class="btn btn-primary" id="btn-save-interviews">인터뷰 최신 크롤링 저장</button>
