스터디 검색 화면을 개선하라
스터디 검색에서 keyword와 title 2가지로 분리하여 적어 제대로 서버에 값이
넘어가지 않아 title로 통일합니다

--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -94,8 +94,7 @@
                     <li class="list-group-item"><a href="/studys/end">종료</a></li>
                     <li class="list-group-item">
                         <form class="navbar-form pull-left" action="/studys/{{studyStateCode}}" method="get">
-                            <label for="keyword"></label>
-                            <input type="text" id="title" name="keyword" placeholder="책 제목을 입력하세요">
+                            <label for="title"></label><input type="text" id="title" name="title" placeholder="책 제목을 입력하세요">
                             <button type="submit" class="btn btn-primary btn-sm">검색</button>
                         </form>
                     </li>
