스터디 조회 화면 반환형을 개선하라
model에서 enum 값을 모두 따로 넘기는 방식을 하나의 dto에서 반환하도록
개선합니다

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -181,7 +181,7 @@
             </div>
             <div class="form-group">
                 <label for="day"> 요일 </label>
-                <input type="text" class="form-control" id="day" value="{{day}}" readOnly>
+                <input type="text" class="form-control" id="day" value="{{detailedStudy.studyResultDto.day.title}}" readOnly>
             </div>
             <div class="form-group">
                 <label for="startTime"> 시작 시간 </label>
@@ -193,11 +193,11 @@
             </div>
             <div class="form-group">
                 <label for="studyState"> 스터디 모집 상황 </label>
-                <input type="text" class="form-control" id="studyState" value="{{studyState}}" readOnly>
+                <input type="text" class="form-control" id="studyState" value="{{detailedStudy.studyResultDto.studyState.title}}" readOnly>
             </div>
             <div class="form-group">
                 <label for="zone"> 지역 </label>
-                <input type="text" class="form-control" id="zone" value="{{zone}}" readOnly>
+                <input type="text" class="form-control" id="zone" value="{{detailedStudy.studyResultDto.zone.title}}" readOnly>
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
