--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -210,13 +210,13 @@
                 <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
             {{/study}}
         {{/account}}
-        {{#studyApplier}}
+        {{#studyApply}}
             <button type="button" class="btn btn-danger" id="btn-cancel-study">신청 취소</button>
-        {{/studyApplier}}
-        {{#studyAdmin}}
+        {{/studyApply}}
+        {{#studyManager}}
             <button type="button" class="btn btn-warning"
                     onclick="location.href='/studys/update/{{detailedStudy.studyResultDto.id}}'">수정</button>
-        {{/studyAdmin}}
+        {{/studyManager}}
     </div>
 
     <div class="container mt-5">
