--- a/app/src/main/resources/templates/users/users-favorite.mustache
+++ b/app/src/main/resources/templates/users/users-favorite.mustache
@@ -11,15 +11,15 @@
 </style>
 <div class="container-fluid" style="margin-top: 100px">
     <div class="row">
-        <div class="card shadow col-md-9" style="min-height:600px;">
+        <div class="card shadow col-md-12" style="min-height:600px;">
             <div class="card-body">
-                <h4 class="card-title">스터디 신청자</h4>
+                <h4 class="card-title">즐겨찾기 스터디</h4>
                 <table class="table table-hover" id='board_list'>
                     <thead>
                     <tr>
                         <th class="text-center d-none d-md-table-cell">이름</th>
-                        <th class="text-center d-none d-md-table-cell">이메일</th>
-                        <th class="text-center d-none d-md-table-cell">닉네임</th>
+                        <th class="text-center d-none d-md-table-cell">책 제목</th>
+                        <th class="text-center d-none d-md-table-cell">스터디 상태</th>
                     </tr>
                     </thead>
                     <tbody>
