즐겨찾기 스터디 조회 화면을 개선하라
화면에 제목, 책제목, 모집중상태를 나타내도록 개선합니다

--- a/app/src/main/resources/templates/users/users-favorite.mustache
+++ b/app/src/main/resources/templates/users/users-favorite.mustache
@@ -23,13 +23,13 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {{#StudyInfoResultDto.studyAccountInfoResultDto}}
+                    {{#StudyFavoriteResultDto}}
                         <tr>
-                            <td class="text-center d-none d-md-table-cell">{{name}}</td>
-                            <td class="text-center d-none d-md-table-cell">{{email}}</td>
-                            <td class="text-center d-none d-md-table-cell">{{nickname}}</td>
+                            <td class="text-center d-none d-md-table-cell"><a href='/studys/{{id}}'>{{name}}</a></td>
+                            <td class="text-center d-none d-md-table-cell">{{bookName}}</td>
+                            <td class="text-center d-none d-md-table-cell">{{studyState.title}}</td>
                         </tr>
-                    {{/StudyInfoResultDto.studyAccountInfoResultDto}}
+                    {{/StudyFavoriteResultDto}}
                     </tbody>
                 </table>
             </div>
