--- a/app/src/main/resources/templates/books/books-lists.mustache
+++ b/app/src/main/resources/templates/books/books-lists.mustache
@@ -90,8 +90,8 @@
                     <li class="list-group-item"><a href="/books/new">신간도서</a></li>
                     <li class="list-group-item">
                         <form class="navbar-form pull-left" action="/books/search" method="get">
-                            <label for="keyword"></label>
-                            <input type="text" id="keyword" name="keyword" placeholder="제목을 입력하세요">
+                            <label for="search"></label>
+                            <input type="text" id="search" name="search" placeholder="제목을 입력하세요">
                             <button type="submit" class="btn btn-primary btn-sm">검색</button>
                         </form>
                     </li>
