스터디 요청 클래스에 javadoc을 추가하라
스터디 요청 클래스에 javadoc을 추가합니다

또한 studys의 이름을 문법에 맞게 studies로 개선합니다

--- a/app/src/main/resources/templates/studies/studies-detail.mustache
+++ b/app/src/main/resources/templates/studies/studies-detail.mustache
@@ -215,7 +215,7 @@
         {{/studyApply}}
         {{#studyManager}}
             <button type="button" class="btn btn-warning"
-                    onclick="location.href='/studys/update/{{detailedStudy.studyResultDto.id}}'">수정</button>
+                    onclick="location.href='/studies/update/{{detailedStudy.studyResultDto.id}}'">수정</button>
         {{/studyManager}}
     </div>
 
