--- a/app/src/main/resources/templates/studies/studies-update.mustache
+++ b/app/src/main/resources/templates/studies/studies-update.mustache
@@ -92,11 +92,11 @@
                 </label>
             </div>
         </form>
-        <a href="/studys/{{StudyUpdateInfoDto.id}}" role="button" class="btn btn-secondary">돌아가기</a>
+        <a href="/studies/{{StudyUpdateInfoDto.id}}" role="button" class="btn btn-secondary">돌아가기</a>
         <button type="button" class="btn btn-primary" id="btn-update-study">수정</button>
         <button type="button" class="btn btn-danger" id="btn-delete-study">삭제</button>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="/js/app/studys.js"></script>
+<script src="/js/app/studies.js"></script>
 {{>layout/footer}}
