--- a/app/src/main/resources/templates/books/books-lists.mustache
+++ b/app/src/main/resources/templates/books/books-lists.mustache
@@ -130,7 +130,7 @@
     <div id="{{itemId}}" class="modal">
         <div class="modal_content" id="modal{{itemId}}"
              onclick="fadeOutModal('#{{itemId}}')">
-            <form method="get" action="/studys/save">
+            <form method="get" action="/studies/save">
                 <input type="hidden" name="bookName" value="{{title}}">
                 <input type="hidden" name="bookImage" value="{{coverLargeUrl}}">
                 <h6>{{title}}</h6>
@@ -149,7 +149,7 @@
                     </tr>
                 </table>
                 <button type="submit" class="btn btn-primary">스터디 생성</button>
-                <button type="button" class="btn btn-warning" onclick="location.href='/studys/open?title={{title}}'">모집중 스터디</button>
+                <button type="button" class="btn btn-warning" onclick="location.href='/studies/open?title={{title}}'">모집중 스터디</button>
                 <button type="button" class="btn btn-danger">돌아가기</button>
             </form>
         </div>
