--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="/studys/open" class="nav-link">스터디 게시판</a>
+                <a href="/studies/open" class="nav-link">스터디 게시판</a>
             </li>
             <li class="nav-item">
                 <a href="/books/bestseller" class="nav-link">도서 검색</a>
@@ -45,12 +45,12 @@
                 </li>
                 {{#studyApply}}
                     <li class="nav-item">
-                        <a href="/studys/{{id}}" class="nav-link">신청 스터디</a>
+                        <a href="/studies/{{id}}" class="nav-link">신청 스터디</a>
                     </li>
                 {{/studyApply}}
                 {{#studyManager}}
                     <li class="nav-item">
-                        <a href="/studys/{{id}}/users" class="nav-link">스터디 참가자</a>
+                        <a href="/studies/{{id}}/users" class="nav-link">스터디 참가자</a>
                     </li>
                 {{/studyManager}}
                 <li class="nav-item">
