스터디 요청 테스트에 rest docs를 추가하라
스터디 요청 테스트에 rest docs를 추가합니다

--- a/app/src/main/resources/templates/users/users-favorite.mustache
+++ b/app/src/main/resources/templates/users/users-favorite.mustache
@@ -23,13 +23,13 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {{#StudyFavoriteResultDto}}
+                    {{#StudyFavoriteDto}}
                         <tr>
                             <td class="text-center d-none d-md-table-cell"><a href='/studys/{{id}}'>{{name}}</a></td>
                             <td class="text-center d-none d-md-table-cell">{{bookName}}</td>
                             <td class="text-center d-none d-md-table-cell">{{studyState.title}}</td>
                         </tr>
-                    {{/StudyFavoriteResultDto}}
+                    {{/StudyFavoriteDto}}
                     </tbody>
                 </table>
             </div>
