--- a/app/src/main/resources/templates/login.mustache
+++ b/app/src/main/resources/templates/login.mustache
@@ -1,6 +1,5 @@
 {{>layout/header}}
 <link rel="stylesheet" type="text/css" href="/js/app/login.css">
-
 <div class="login">
     <form method="POST" action="/loginprocess">
         <label for="username"><span>이메일</span></label>
@@ -21,6 +20,19 @@
             </label>
         </div>
         <button type="submit">로그인</button>
+        <a id="custom-login-btn" href="javascript:loginWithKakao()">
+            <img
+                    src="//k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg"
+                    alt="카카오 로그인 버튼"
+                    width="300"
+                    height="70"
+            />
+        </a>
+<!--        <li onclick="kakaoLogout();">-->
+<!--            <a href="javascript:void(0)">-->
+<!--                <span>카카오 로그아웃</span>-->
+<!--            </a>-->
+<!--        </li>-->
         {{#loginError}}
             <div class="error-message">
                 <span> 아이디나 패스워드가 올바르지 않습니다. </span>
@@ -33,4 +45,42 @@
         {{/loginRequired}}
     </form>
 </div>
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+<script>
+    Kakao.init('aaeec1db77858a24cf1b55310ebabaf1'); //발급받은 키 중 javascript키를 사용해준다.
+    console.log(Kakao.isInitialized()); // sdk초기화여부판단
+    //카카오로그인
+    function loginWithKakao() {
+        Kakao.API.request({
+            url: '/v2/user/me',
+            success: function(response) {
+                console.log(response);
+                var id = response.id;
+                var email = response.kaccount_email;
+                var nickname = response.properties.nickname;
+
+
+            },
+            fail: function(error) {
+                console.log(error);
+            }
+        });
+    }
+
+    //카카오로그아웃
+    function kakaoLogout() {
+        if (Kakao.Auth.getAccessToken()) {
+            Kakao.API.request({
+                url: '/v1/user/unlink',
+                success: function (response) {
+                    console.log(response)
+                },
+                fail: function (error) {
+                    console.log(error)
+                },
+            })
+            Kakao.Auth.setAccessToken(undefined)
+        }
+    }
+</script>
 {{>layout/footer}}
