카카오 로그인 후 처리를 개선하라
카카오 로그인을 했는데, 기존에 회원가입이 안되어있다면 회원가입페이지
주소로 이동하도록 개선합니다

기존에 로그인한 이메일과 생성된 인증번호를 회원가입 페이지에 넘겨주어야
합니다

--- a/app/src/main/resources/templates/login.mustache
+++ b/app/src/main/resources/templates/login.mustache
@@ -63,7 +63,6 @@
                 }).then((response) => {
                     var email = response.kakao_account.email;
                     var data = {email : email};
-                    var isLogined = false;
                     $.ajax({
                         type: 'POST',
                         url: '/api/kakao-login',
@@ -72,11 +71,11 @@
                         data: JSON.stringify(data),
                         async: false,
                         complete: function(response) {
-                            alert(response.responseText);
-                            if(response.responseText === "Y") {
+                            if(response.responseJSON.authenticationNumber === null) {
                                 window.location.href='/';
                             } else {
-                                window.location.href='/users/save&email=' + data.email;
+                                window.location.href='/users/save&email=' + data.email
+                                        + '&authenticationNumber=' + response.responseJSON.authenticationNumber;
                             }
                             resolve(response);
                         }
