--- a/app/src/main/resources/templates/users/users-save.mustache
+++ b/app/src/main/resources/templates/users/users-save.mustache
@@ -28,13 +28,24 @@
             </div>
             <div class="form-group">
                 <label for="email"> 이메일 </label>
-                <input type="text" class="form-control" id="email" placeholder="이메일을 입력하세요">
+                {{#email}}
+                    <input type="text" class="form-control" id="email" value="{{email}}" placeholder="이메일을 입력하세요" readonly>
+                {{/email}}
+                {{^email}}
+                    <input type="text" class="form-control" id="email" placeholder="이메일을 입력하세요">
+                    <button type="button" class="btn btn-primary" id="btn-sendMessage">인증번호 전송</button>
+                {{/email}}
             </div>
-            <button type="button" class="btn btn-primary" id="btn-sendMessage">인증번호 전송</button>
 
             <div class="form-group">
                 <label for="authenticationNumber"> 인증번호 </label>
-                <input type="text" class="form-control" id="authenticationNumber" placeholder="인증번호를 입력하세요">
+                {{#authenticationNumber}}
+                    <input type="text" class="form-control" id="authenticationNumber"
+                           value = "{{authenticationNumber}}" placeholder="인증번호를 입력하세요" readonly>
+                {{/authenticationNumber}}
+                {{^authenticationNumber}}
+                    <input type="text" class="form-control" id="authenticationNumber" placeholder="인증번호를 입력하세요">
+                {{/authenticationNumber}}
             </div>
 
             <div class="form-group">
