카카오 로그아웃을 화면에서 제거하라
카카오 로그아웃을 화면에서 제거합니다

--- a/app/src/main/resources/templates/login.mustache
+++ b/app/src/main/resources/templates/login.mustache
@@ -28,11 +28,11 @@
                     height="70"
             />
         </a>
-        <li onclick="kakaoLogout();">
-            <a href="javascript:void(0)">
-                <span>카카오 로그아웃</span>
-            </a>
-        </li>
+<!--        <li onclick="kakaoLogout();">-->
+<!--            <a href="javascript:void(0)">-->
+<!--                <span>카카오 로그아웃</span>-->
+<!--            </a>-->
+<!--        </li>-->
         {{#loginError}}
             <div class="error-message">
                 <span> 아이디나 패스워드가 올바르지 않습니다. </span>
