--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -37,6 +37,9 @@
             <li class="nav-item">
                 <a href="/interviews" class="nav-link">작가 인터뷰</a>
             </li>
+            <li class="nav-item">
+                <a href="/posts" class="nav-link">자유 게시글</a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             {{#account}}
