--- a/app/src/main/resources/templates/posts/posts.mustache
+++ b/app/src/main/resources/templates/posts/posts.mustache
@@ -18,15 +18,14 @@
         <div class="row d-flex justify-content-center">
             <div class="col-md-8">
                 <div class="headings d-flex justify-content-between align-items-center mb-3">
-                    <h5>댓글 수({{detailedStudy.studyResultDto.commentsCount}})</h5>
+                    <h5>게시글 수({{counts}})</h5>
                 </div>
                 {{#posts}}
                     <div class="card p-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="user d-flex flex-row align-items-center">
                                 <div>
-                                    <small class="font-weight-bold text-primary">{{nickname}}</small>
-                                    <small>{{updatedDate}}</small>
+                                    <small class="font-weight-bold text-primary">익명</small>
                                 </div>
                             </div>
                         </div>
