--- a/app/src/main/resources/templates/posts/posts.mustache
+++ b/app/src/main/resources/templates/posts/posts.mustache
@@ -6,8 +6,8 @@
                 <div class="shadow p-3 bg-white rounded">
                     <div class="mt-5 d-flex flex-row">
                         <div class="w-100 ml-2 comment-area">
-                            <textarea class="form-control" id="studyComment"></textarea>
-                            <button class="btn btn-secondary btn-block mt-2 post-btn" id="btn-save-studyComment">등록</button>
+                            <textarea class="form-control" id="post"></textarea>
+                            <button class="btn btn-secondary btn-block mt-2 post-btn" id="btn-save-post">등록</button>
                         </div>
                     </div>
                 </div>
