--- a/app/src/main/resources/templates/posts/posts.mustache
+++ b/app/src/main/resources/templates/posts/posts.mustache
@@ -24,8 +24,11 @@
                     <div class="card p-3">
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="user d-flex flex-row align-items-center">
-                                <div>
+                                <div style="margin-right: 10px;">
                                     <small class="font-weight-bold text-primary">익명</small>
+                                </div>
+                                <div>
+                                    <small>{{createdDate}}</small>
                                 </div>
                             </div>
                         </div>
